<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--suppress AndroidElementNotAllowed -->
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="theme_switch"
        android:summary="@string/pref_description_theme_choose"
        android:title="@string/pref_title_theme_choose" />


    <ListPreference
        android:defaultValue="@string/compact_layout_choose_text"
        android:entries="@array/pref_layout_list_titles"
        android:entryValues="@array/pref_chose_layout_list_values"
        android:key="layouts_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_chose_layout" />

    <ListPreference
        android:defaultValue="@string/type_sort_none"
        android:entries="@array/pref_sort_type_list_titles"
        android:entryValues="@array/pref_pref_sort_type_list_values"
        android:key="sort_type_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sort_type" />


    <!--suppress AndroidElementNotAllowed -->
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="welcome_pages_switch"
        android:summary="@string/pref_description_show_welcome_pages"
        android:title="@string/pref_title_show_welcome_pages" />

    <!--suppress AndroidElementNotAllowed -->
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="preference_apps_switch"
        android:summary="@null"
        android:title="@string/pref_title_show_prefs_app" />


</PreferenceScreen>
