<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mobile_phone"
                />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:text="@string/mobile_phone_value" />

                <TextView
                    android:text="@string/mobile_header_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_phone"
                />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:text="@string/home_phone_value" />

                <TextView
                    android:text="@string/home_phone_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail"
                />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:text="mortr@yandex.ru" />

                <TextView
                    android:text="main email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail"
                />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:text="mortr@tut.by" />

                <TextView
                    android:text="additional mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:textIsSelectable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="map"
                    android:text="601 University Dr street  San Marcos, TX 78666" />

                <TextView
                    android:text="home address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>